--- a/package.json
+++ b/package.json
@@ -26,14 +26,12 @@
     ]
   },
   "dependencies": {
+    "classnames": "^2.5.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "classnames": "^2.5.0"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "typescript": "^5.5.3",
-    "typescript-eslint": "^8.0.1",
-    "vite": "^5.4.1",
+    "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^14.1.2",
     "@types/node": "^20.10.5",
     "@types/react": "^18.2.0",
@@ -58,6 +56,9 @@
     "storybook": "^7.6.6",
     "stylelint": "^16.1.0",
     "stylelint-config-standard-scss": "^12.0.0",
+    "typescript": "^5.5.3",
+    "typescript-eslint": "^8.0.1",
+    "vite": "^5.4.1",
     "vitest": "^1.1.0"
   }
 }
