--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,9 @@
 {
   "root": true,
-  "env": { "browser": true, "es2020": true },
+  "env": {
+    "browser": true,
+    "es2020": true
+  },
   "extends": [
     "airbnb",
     "airbnb/hooks",
@@ -19,9 +22,16 @@
   "globals": {
     "globalsIsDev": true
   },
-  "ignorePatterns": ["node_modules", "build", "dist"],
+  "ignorePatterns": [
+    "node_modules",
+    "build",
+    "dist"
+  ],
   "parser": "@typescript-eslint/parser",
-  "plugins": ["react-refresh", "prettier" ],
+  "plugins": [
+    "react-refresh",
+    "prettier"
+  ],
   "rules": {
     "prettier/prettier": [
       "error",
@@ -40,7 +50,6 @@
     "one-var": 0,
     "no-underscore-dangle": 0,
     "react-hooks/exhaustive-deps": 0,
-    "import/prefer-default-export": 0,
     "import/no-extraneous-dependencies": 0,
     "react/react-in-jsx-scope": 0,
     "no-param-reassign": 0,
@@ -49,15 +58,49 @@
     "react/require-default-props": 0,
     "react/jsx-props-no-spreading": 0,
     "react/function-component-definition": 0,
-    "react/no-unstable-nested-components": ["error", { "allowAsProps": true }],
+    "react/jsx-curly-brace-presence": [
+      "error",
+      {
+        "props": "never",
+        "children": "never"
+      }
+    ],
+    "react/no-unstable-nested-components": [
+      "error",
+      {
+        "allowAsProps": true
+      }
+    ],
     "import/no-cycle": 2,
     "import/first": 2,
     "import/order": 2,
     "eqeqeq": 2,
-    "complexity": [2, {"max": 10}],
-    "camelcase": [2, {"allow": ["^UNSAFE_"], "properties": "never"}],
-    "@typescript-eslint/no-magic-numbers": [1, {
-      "ignore": [-1, 0, 1, 2]}],
+    "complexity": [
+      2,
+      {
+        "max": 10
+      }
+    ],
+    "camelcase": [
+      2,
+      {
+        "allow": [
+          "^UNSAFE_"
+        ],
+        "properties": "never"
+      }
+    ],
+    "@typescript-eslint/no-magic-numbers": [
+      1,
+      {
+        "ignore": [
+          -1,
+          0,
+          1,
+          2
+        ]
+      }
+    ],
     "@typescript-eslint/consistent-type-imports": [
       "error",
       {
@@ -79,7 +122,10 @@
       "error",
       {
         "required": {
-          "some": ["nesting", "id"]
+          "some": [
+            "nesting",
+            "id"
+          ]
         }
       }
     ],
@@ -87,7 +133,10 @@
       "error",
       {
         "required": {
-          "some": ["nesting", "id"]
+          "some": [
+            "nesting",
+            "id"
+          ]
         }
       }
     ],
