--- a/.eslintrc
+++ b/.eslintrc
@@ -1,145 +1,126 @@
 {
-  "root": true,
-  "env": {
-    "browser": true,
-    "es2020": true
-  },
-  "extends": [
-    "airbnb",
-    "airbnb/hooks",
-    "airbnb-typescript",
-    "plugin:prettier/recommended",
-    "plugin:storybook/recommended"
-  ],
-  "parserOptions": {
-    "ecmaFeatures": {
-      "jsx": true
+    "root": true,
+    "env": {
+        "browser": true,
+        "es2021": true,
+        "jest": true,
+        "node": true,
     },
-    "ecmaVersion": "latest",
-    "sourceType": "module",
-    "project": "./tsconfig.json"
-  },
-  "globals": {
-    "globalsIsDev": true
-  },
-  "ignorePatterns": [
-    "node_modules",
-    "build",
-    "dist"
-  ],
-  "parser": "@typescript-eslint/parser",
-  "plugins": [
-    "react-refresh",
-    "prettier"
-  ],
-  "rules": {
-    "prettier/prettier": [
-      "error",
-      {
-        "endOfLine": "auto",
-        "singleQuote": true,
-        "tabWidth": 4,
-        "bracketSpacing": true,
-        "bracketSameLine": true,
-        "printWidth": 120,
-        "semi": true,
-        "trailingComma": "all",
-        "arrowParens": "always"
-      }
+    "extends": [
+        "eslint:recommended",
+        "plugin:@typescript-eslint/recommended",
+        "plugin:react-hooks/recommended",
+        "plugin:prettier/recommended",
+        "plugin:react/recommended",
+        "plugin:react/jsx-runtime",
     ],
-    "one-var": 0,
-    "no-underscore-dangle": 0,
-    "react-hooks/exhaustive-deps": 0,
-    "import/no-extraneous-dependencies": 0,
-    "react/react-in-jsx-scope": 0,
-    "no-param-reassign": 0,
-    "react/display-name": 0,
-    "react/prop-types": 0,
-    "react/require-default-props": 0,
-    "react/jsx-props-no-spreading": 0,
-    "react/function-component-definition": 0,
-    "react/jsx-curly-brace-presence": [
-      "error",
-      {
-        "props": "never",
-        "children": "never"
-      }
-    ],
-    "react/no-unstable-nested-components": [
-      "error",
-      {
-        "allowAsProps": true
-      }
-    ],
-    "import/no-cycle": 2,
-    "import/first": 2,
-    "import/order": 2,
-    "eqeqeq": 2,
-    "complexity": [
-      2,
-      {
-        "max": 10
-      }
-    ],
-    "camelcase": [
-      2,
-      {
-        "allow": [
-          "^UNSAFE_"
+    "ignorePatterns": ["dist", ".eslintrc.cjs"],
+    "parser": "@typescript-eslint/parser",
+    "parserOptions": {
+        "sourceType": "module",
+        "ecmaVersion": "latest",
+    },
+    "plugins": ["react-refresh", "prettier", "simple-import-sort"],
+    "rules": {
+        "no-useless-escape": "off",
+        "simple-import-sort/imports": [
+            "error",
+            {
+                "groups": [
+                    // Packages `react` related packages come first.
+                    ["^react", "^@?\\w"],
+                    // Internal packages.
+                    ["^(@|components)(/.*|$)"],
+                    // Side effect imports.
+                    ["^\\u0000"],
+                    // Parent imports. Put `..` last.
+                    ["^\\.\\.(?!/?$)", "^\\.\\./?$"],
+                    // Other relative imports. Put same-folder imports and `.` last.
+                    ["^\\./(?=.*/)(?!/?$)", "^\\.(?!/?$)", "^\\./?$"],
+                    // Style imports.
+                    ["^.+\\.?(css)$"],
+                ],
+            },
         ],
-        "properties": "never"
-      }
-    ],
-    "@typescript-eslint/no-magic-numbers": [
-      1,
-      {
-        "ignore": [
-          -1,
-          0,
-          1,
-          2
-        ]
-      }
-    ],
-    "@typescript-eslint/consistent-type-imports": [
-      "error",
-      {
-        "prefer": "type-imports"
-      }
-    ],
-    "@typescript-eslint/ban-types": [
-      "error",
-      {
-        "types": {
-          "FC": "Useless and has some drawbacks, see https://github.com/facebook/create-react-app/pull/8177",
-          "React.FC": "Useless and has some drawbacks, see https://github.com/facebook/create-react-app/pull/8177",
-          "React.FunctionComponent": "Useless and has some drawbacks, see https://github.com/facebook/create-react-app/pull/8177"
+        "simple-import-sort/exports": "error",
+        "react-hooks/rules-of-hooks": "off",
+        "arrow-body-style": ["error", "as-needed"],
+        "padding-line-between-statements": [
+            "error",
+            {
+                "blankLine": "always",
+                "prev": "*",
+                "next": "return",
+            },
+            {
+                "blankLine": "always",
+                "prev": "import",
+                "next": "*",
+            },
+            {
+                "blankLine": "any",
+                "prev": "import",
+                "next": "import",
+            },
+        ],
+        "no-console": [
+            "error",
+            {
+                "allow": ["warn", "error", "info", "dir", "time", "timeEnd", "trace", "assert"],
+            },
+        ],
+        "@typescript-eslint/ban-ts-comment": [
+            "error",
+            {
+                "ts-ignore": "allow-with-description",
+            },
+        ],
+        "@typescript-eslint/ban-types": [
+            "error",
+            {
+                "types": {
+                    "FC": "Useless and has some drawbacks, see https://github.com/facebook/create-react-app/pull/8177",
+                    "React.FC": "Useless and has some drawbacks, see https://github.com/facebook/create-react-app/pull/8177",
+                    "React.FunctionComponent": "Useless and has some drawbacks, see https://github.com/facebook/create-react-app/pull/8177",
+                },
+                "extendDefaults": false,
+            },
+        ],
+        "react-refresh/only-export-components": [
+            "warn",
+            {
+                "allowConstantExport": true,
+                "allowExportNames": ["useFilters"],
+            },
+        ],
+        "react/jsx-key": [
+            "error",
+            {
+                "checkFragmentShorthand": true,
+                "checkKeyMustBeforeSpread": true,
+                "warnOnDuplicates": true,
+            },
+        ],
+        "react/display-name": "off",
+        "react/prop-types": "off",
+        "no-use-before-define": [
+            "error",
+            {
+                "functions": false,
+                "classes": false,
+            },
+        ],
+        "no-nested-ternary": "error",
+    },
+    "globals": {
+        "__IS_DEV__": true,
+    },
+    "overrides": [
+        {
+            "files": ["config/**", "json-server/**", "vite.config.ts", "scripts/**"],
+            "rules": {
+                "@typescript-eslint/no-var-requires": "off",
+            },
         },
-        "extendDefaults": false
-      }
     ],
-    "jsx-a11y/label-has-associated-control": [
-      "error",
-      {
-        "required": {
-          "some": [
-            "nesting",
-            "id"
-          ]
-        }
-      }
-    ],
-    "jsx-a11y/label-has-for": [
-      "error",
-      {
-        "required": {
-          "some": [
-            "nesting",
-            "id"
-          ]
-        }
-      }
-    ],
-    "react-refresh/only-export-components": 0
-  }
 }
