--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     ]
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "classnames": "^2.5.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.5.0",
@@ -47,6 +49,7 @@
     "eslint-plugin-prettier": "^5.1.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-storybook": "^0.6.15",
     "husky": "^8.0.3",
     "jsdom": "^23.0.1",
@@ -56,9 +59,11 @@
     "storybook": "^7.6.6",
     "stylelint": "^16.1.0",
     "stylelint-config-standard-scss": "^12.0.0",
+    "stylelint-order": "^6.0.4",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1",
+    "vite-plugin-svgr": "^4.2.0",
     "vitest": "^1.1.0"
   }
 }
